# smtp_client

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json  playwright.config.ts  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  vite.config.js
.github/workflows/: release.yml  release_test.yml  releasev2.yml
scripts/: bump.js  exec.js  format.js  images.js  logo.js  set_version.js  version.js
src/: app.html  app.scss
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  commands.rs  crypt.rs  database.rs  dialogs.rs  file.rs  main.rs  response.rs  serialize.rs  state.rs
src-tauri/src/commands/: export.rs  import.rs  import_export.rs  mod.rs  send_mail.rs  settings.rs  smtp_configuration.rs  smtp_message.rs  test.rs
src-tauri/src/database/: key_value.rs  mod.rs  secret.rs  settings.rs  smtp_configuration.rs  smtp_message.rs
src-tauri/src/migration/: migration_version.rs  mod.rs  v0_0_0.rs  v0_4_0.rs
src-tauri/src/migration/versions/: mod.rs  v0_0_0.rs  v0_4_0.rs
src/lib/api/: tauri.ts  tauri_classes.ts
src/lib/components/: Badge.svelte  Hide.svelte  OverflowText.svelte  Random.ts  Separator.svelte  Test.svelte
src/lib/components/Dropdown/: Dropdown.svelte  DropdownHeader.svelte  DropdownItem.svelte  DropdownSeparator.svelte
src/lib/components/dropdown/: DropdownSeparator.svelte
src/lib/components/form/: Button.svelte  Checkbox.svelte  Input.svelte  Radio.svelte  Select.svelte  Textarea.svelte
src/lib/components/hide_show/: HideShow.svelte  HideShowIcon.svelte
src/lib/components/logo/: LogoWithText.svelte
src/lib/components/modal/: Modal.svelte
src/lib/components/settings/: SettingsImportExportRow.svelte  SettingsPanel.svelte
src/lib/components/smtp/: SMTPConfiguration.svelte  SMTPConfigurationList.svelte  SMTPConfigurationPanel.svelte  SMTPMessage.svelte  SMTPMessageList.svelte  SMTPMessagePanel.svelte  SMTPSendMail.svelte
src/lib/components/tab/: Tab.svelte  TabList.svelte  TabPanel.svelte  Tabs.svelte
src/lib/components/toast/: Toast.svelte  Toasts.svelte
src/lib/components/tooltip/: Tooltip.svelte  Tooltips.svelte
src/lib/elements/: SMTPConfiguration.svelte  SMTPMessage.svelte  Toasts.svelte
src/lib/i18n/: t.ts  translate.ts
src/lib/i18n/translations/: en.ts  pl.ts
src/lib/stores/: cache.svelte.ts  modal.ts  saved_data.ts  settings.ts  smtp_configuration.ts  smtp_message.ts  theme.ts  toasts.ts  tooltips.ts
src/lib/types/: Event.ts
src/lib/utils/: random.ts  types.ts  utils.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/styles/: custom.scss  fonts.scss
src/styles/fonts/: merriweather.scss  roboto-mono.scss  roboto-serif.scss  roboto.scss  ubuntu-condensed.scss  ubuntu-mono.scss  ubuntu.scss
