[package]
name = "smtp_client"
version = "0.3.0"
description = "SMTP Client"
keywords = ["aplication", "smtp", "client", "devtools"]
authors = ["Sebastian Kaźmierczak <moques93@gmail.com>"]
license = "MIT"
homepage = "https://github.com/MoQuEs/smtp_client"
repository = "https://github.com/MoQuEs/smtp_client"
edition = "2021"
rust-version = "1.66.0"
readme = "README.md"

[build-dependencies]
tauri-build = { version = "1.3.0", default-features = false, features = [] }

[dependencies]
serde_json = { version = "1.0.96", default-features = false, features = [] }
serde = { version = "1.0.160", default-features = false, features = ["derive"] }
tauri = { version = "1.3.0", default-features = false, features = ["compression", "wry"] }
anyhow = { version = "1.0.71", default-features = false, features = [] }
tauri-runtime = { version = "0.13.0", default-features = false, features = [] }
orion = { version = "0.17.4", default-features = false, features = ["serde", "safe_api"] }
typeshare = { version = "1.0.1", default-features = false, features = [] }
mail-send = { version = "0.3.3", default-features = false, features = ["builder"] }
sled = { version = "0.34.7", default-features = false, features = [] }
bincode = { version = "1.3.3", default-features = false, features = [] }

rust_utils = { git = "https://github.com/MoQuEs/rust_utils", default-features = false, features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
